# vertical-sync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/debrief/: SKILL.md
.claude/skills/plan-block/: SKILL.md
config/: athlete.example.toml
docs/: coach-memory.md  metrics_backlog.md
src/vertical_sync/: analysis.py  cli.py  config.py  fit_parser.py
templates/: athlete.md  journal-entry.md  plan-week.md
